--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,6 @@
     "morgan": "~1.9.1",
     "nodemon": "2.0.9",
     "pug": "2.0.0-beta11",
-    "tedious": "9.2.1"
+    "tedious": "^9.2.1"
   }
 }
